# StockScan

./: .gitignore  GithubScan.py  New.py  README.md  logger.py  makefigures.py  pyproject.toml  requirements.txt  trend_stock_scanner_data.py
ListOfStocks/: AllProcessed.csv
cache_csv/: CandEarnings05-14-2023.csv  CandEarnings05-15-2023.csv  CandInfoTot05-14-2023.csv  CandInfoTot05-15-2023.csv  Earnings.csv  EconCalendar05-14-2023.pickle  EconCalendar05-15-2023.pickle  Mkt05-14-2023.csv  Mkt05-15-2023.csv  Sectors05-14-2023.csv
src/trend_stock_scanner_app/: New.py  data.py
